src/parser/CmmParser.java
// Generated from C:/Users/adria/OneDrive/Escritorio/UNIVERSIDAD/AÑO 3/SEMESTRE 2/Disenho de Lenguajes de Programacion/Laboratorio/Project/src/parser\Cmm.g4 by ANTLR 4.9.2
package parser;

    import ast.*;
    import ast.expression.*;
    import ast.type.*;
    import ast.program.*;
    import ast.statement.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, BOOLEAN=38, 
		INT_CONSTANT=39, ONE_LINE_COMMENT=40, MULTI_LINE_COMMENT=41, ID=42, REAL_CONSTANT=43, 
		CHAR_CONSTANT=44, BLANK=45;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_mainfunction = 2, RULE_function_def = 3, 
		RULE_parameters = 4, RULE_function_body = 5, RULE_built_in_type = 6, RULE_return_type = 7, 
		RULE_type = 8, RULE_struct_type = 9, RULE_struct_body = 10, RULE_var_definition = 11, 
		RULE_variables = 12, RULE_function_invocation = 13, RULE_functionArguments = 14, 
		RULE_block = 15, RULE_expressions = 16, RULE_statement = 17, RULE_expression = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "mainfunction", "function_def", "parameters", 
			"function_body", "built_in_type", "return_type", "type", "struct_type", 
			"struct_body", "var_definition", "variables", "function_invocation", 
			"functionArguments", "block", "expressions", "statement", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'main'", "'('", "')'", "','", "'{'", "'}'", "'int'", 
			"'double'", "'char'", "'boolean'", "'['", "']'", "'struct'", "';'", "'='", 
			"'while'", "'if'", "'else'", "'return'", "'write'", "'read'", "'.'", 
			"'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", 
			"'!='", "'=='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "BOOLEAN", "INT_CONSTANT", "ONE_LINE_COMMENT", "MULTI_LINE_COMMENT", 
			"ID", "REAL_CONSTANT", "CHAR_CONSTANT", "BLANK"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionContext d;
		public MainfunctionContext vf;
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public MainfunctionContext mainfunction() {
			return getRuleContext(MainfunctionContext.class,0);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			List<Definition> definitions = new ArrayList<Definition>(); 
			setState(44);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(39);
					((ProgramContext)_localctx).d = definition();
					 definitions.addAll(((ProgramContext)_localctx).d.ast); 
					}
					} 
				}
				setState(46);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(47);
			((ProgramContext)_localctx).vf = mainfunction();
			 definitions.add(((ProgramContext)_localctx).vf.ast); 
			setState(49);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(((ProgramContext)_localctx).vf.ast.getLine(), ((ProgramContext)_localctx).vf.ast.getColumn(), definitions); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Var_definitionContext vd;
		public Function_defContext fd;
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public Function_defContext function_def() {
			return getRuleContext(Function_defContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(58);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				((DefinitionContext)_localctx).vd = var_definition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).vd.ast); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				((DefinitionContext)_localctx).fd = function_def();
				 _localctx.ast.add(((DefinitionContext)_localctx).fd.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainfunctionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token n;
		public Function_bodyContext fb;
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public MainfunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainfunction; }
	}

	public final MainfunctionContext mainfunction() throws RecognitionException {
		MainfunctionContext _localctx = new MainfunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainfunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__0);
			setState(61);
			((MainfunctionContext)_localctx).n = match(T__1);
			setState(62);
			match(T__2);
			setState(63);
			match(T__3);
			setState(64);
			((MainfunctionContext)_localctx).fb = function_body();
			 ((MainfunctionContext)_localctx).ast =  new FuncDefinition(((MainfunctionContext)_localctx).n.getLine(), ((MainfunctionContext)_localctx).n.getCharPositionInLine() + 1, new FunctionType(((MainfunctionContext)_localctx).n.getLine(), ((MainfunctionContext)_localctx).n.getCharPositionInLine() + 1, new ArrayList<VarDefinition>(), new VoidType(((MainfunctionContext)_localctx).n.getLine(), ((MainfunctionContext)_localctx).n.getCharPositionInLine() + 1)), (((MainfunctionContext)_localctx).n!=null?((MainfunctionContext)_localctx).n.getText():null), ((MainfunctionContext)_localctx).fb.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_defContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Return_typeContext t;
		public Token id;
		public ParametersContext p;
		public Function_bodyContext fb;
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public Function_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_def; }
	}

	public final Function_defContext function_def() throws RecognitionException {
		Function_defContext _localctx = new Function_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			((Function_defContext)_localctx).t = return_type();
			setState(68);
			((Function_defContext)_localctx).id = match(ID);
			setState(69);
			match(T__2);
			setState(70);
			((Function_defContext)_localctx).p = parameters();
			setState(71);
			match(T__3);
			setState(72);
			((Function_defContext)_localctx).fb = function_body();
			 ((Function_defContext)_localctx).ast =  new FuncDefinition(((Function_defContext)_localctx).t.ast.getLine(), ((Function_defContext)_localctx).t.ast.getColumn(),
			            new FunctionType(((Function_defContext)_localctx).t.ast.getLine(), ((Function_defContext)_localctx).t.ast.getColumn(), ((Function_defContext)_localctx).p.ast, ((Function_defContext)_localctx).t.ast), (((Function_defContext)_localctx).id!=null?((Function_defContext)_localctx).id.getText():null), ((Function_defContext)_localctx).fb.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public Built_in_typeContext bt1;
		public Token id1;
		public Built_in_typeContext bt2;
		public Token id2;
		public List<Built_in_typeContext> built_in_type() {
			return getRuleContexts(Built_in_typeContext.class);
		}
		public Built_in_typeContext built_in_type(int i) {
			return getRuleContext(Built_in_typeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parameters);
		int _la;
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
			case T__8:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				((ParametersContext)_localctx).bt1 = built_in_type();
				setState(76);
				((ParametersContext)_localctx).id1 = match(ID);
				 _localctx.ast.add(new VarDefinition(((ParametersContext)_localctx).bt1.ast.getLine(), ((ParametersContext)_localctx).bt1.ast.getColumn(), ((ParametersContext)_localctx).bt1.ast, (((ParametersContext)_localctx).id1!=null?((ParametersContext)_localctx).id1.getText():null))); 
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(78);
					match(T__4);
					setState(79);
					((ParametersContext)_localctx).bt2 = built_in_type();
					setState(80);
					((ParametersContext)_localctx).id2 = match(ID);
					 _localctx.ast.add(new VarDefinition(((ParametersContext)_localctx).bt2.ast.getLine(), ((ParametersContext)_localctx).bt2.ast.getColumn(), ((ParametersContext)_localctx).bt2.ast, (((ParametersContext)_localctx).id2!=null?((ParametersContext)_localctx).id2.getText():null))); 
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_bodyContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public Var_definitionContext vd1;
		public StatementContext st1;
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Function_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_body; }
	}

	public final Function_bodyContext function_body() throws RecognitionException {
		Function_bodyContext _localctx = new Function_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__5);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__13))) != 0)) {
				{
				{
				setState(92);
				((Function_bodyContext)_localctx).vd1 = var_definition();
				 _localctx.ast.addAll(((Function_bodyContext)_localctx).vd1.ast); 
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__16) | (1L << T__17) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << BOOLEAN) | (1L << INT_CONSTANT) | (1L << ID) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
				{
				{
				setState(100);
				((Function_bodyContext)_localctx).st1 = statement();
				 _localctx.ast.addAll(((Function_bodyContext)_localctx).st1.ast); 
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Built_in_typeContext extends ParserRuleContext {
		public Type ast;
		public Token t1;
		public Built_in_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_built_in_type; }
	}

	public final Built_in_typeContext built_in_type() throws RecognitionException {
		Built_in_typeContext _localctx = new Built_in_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_built_in_type);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				((Built_in_typeContext)_localctx).t1 = match(T__7);
				 ((Built_in_typeContext)_localctx).ast =  new IntType(((Built_in_typeContext)_localctx).t1.getLine(), ((Built_in_typeContext)_localctx).t1.getCharPositionInLine() + 1); 
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				((Built_in_typeContext)_localctx).t1 = match(T__8);
				 ((Built_in_typeContext)_localctx).ast =  new DoubleType(((Built_in_typeContext)_localctx).t1.getLine(), ((Built_in_typeContext)_localctx).t1.getCharPositionInLine() + 1); 
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				((Built_in_typeContext)_localctx).t1 = match(T__9);
				 ((Built_in_typeContext)_localctx).ast =  new CharType(((Built_in_typeContext)_localctx).t1.getLine(), ((Built_in_typeContext)_localctx).t1.getCharPositionInLine() + 1); 
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				((Built_in_typeContext)_localctx).t1 = match(T__10);
				 ((Built_in_typeContext)_localctx).ast =  new BooleanType(((Built_in_typeContext)_localctx).t1.getLine(), ((Built_in_typeContext)_localctx).t1.getCharPositionInLine() + 1); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_typeContext extends ParserRuleContext {
		public Type ast;
		public Built_in_typeContext t1;
		public Token v1;
		public Built_in_typeContext built_in_type() {
			return getRuleContext(Built_in_typeContext.class,0);
		}
		public Return_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_type; }
	}

	public final Return_typeContext return_type() throws RecognitionException {
		Return_typeContext _localctx = new Return_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_return_type);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
			case T__8:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				((Return_typeContext)_localctx).t1 = built_in_type();
				 ((Return_typeContext)_localctx).ast =  ((Return_typeContext)_localctx).t1.ast; 
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				((Return_typeContext)_localctx).v1 = match(T__0);
				((Return_typeContext)_localctx).ast =  new VoidType(((Return_typeContext)_localctx).v1.getLine(), ((Return_typeContext)_localctx).v1.getCharPositionInLine() + 1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public TypeContext t1;
		public Built_in_typeContext bt1;
		public Struct_typeContext st1;
		public Token s1;
		public Built_in_typeContext built_in_type() {
			return getRuleContext(Built_in_typeContext.class,0);
		}
		public Struct_typeContext struct_type() {
			return getRuleContext(Struct_typeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(CmmParser.INT_CONSTANT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}
